# rust-todo-wasm

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  fleet.toml
.cargo/: config.toml
.github/workflows/: build.yml  rust.yml  tests.yml
.mind/: state.json
