[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = 'thin'

[workspace]

members = [
  "packages/server",
  "packages/entity",
  "packages/migration",
  "packages/client",
  "packages/field-names",
  "packages/validator"
]

default-members = ["packages/server"]
